# src/auth/dto/update-auth.dto.ts
@@ -1,4 +1,7 @@
-import { PartialType } from '@nestjs/swagger';
-import { CreateAuthDto } from './create-auth.dto';
+import { IsNotEmpty, IsString } from 'class-validator';
 
-export class UpdateAuthDto extends PartialType(CreateAuthDto) {}
+export class UpdateAuthDto {
+  @IsString()
+  @IsNotEmpty()
+  refreshToken: string;
+}
